--- a/src/projects/react-to-do.mdx
+++ b/src/projects/react-to-do.mdx
@@ -1,7 +1,7 @@
 ---
 title: React To-Do
 image: ../images/react-to-do.jpg
-skills: ['React', 'JavaScript']
+skills: ['React.js', 'JavaScript']
 desc: Super simple but weirdly addictive to-do list. Add and delete as many items as you like! Built with React and hosted on Heroku.
 imageAlt: To-do list with remove button on each to-do and text input under list to add new to-do
 github: https://github.com/maureenlholland/to-do-app
