refactor wrappers, update about copy

--- a/src/projects/react-to-do.mdx
+++ b/src/projects/react-to-do.mdx
@@ -1,5 +1,5 @@
 ---
-title: React To-Do
+title: React To-Do List
 image: ../images/react-to-do.jpg
 skills: ['React.js', 'JavaScript']
 desc: Super simple but weirdly addictive to-do list. Add and delete as many items as you like! Built with React and hosted on Heroku.
